Adding back to results button. (DHH-481)

--- a/app/views/dams_objects/show.html.erb
+++ b/app/views/dams_objects/show.html.erb
@@ -11,6 +11,11 @@
 
 <div class="row-fluid">
   <div id="content" class="show-document span9">
+  	<div class="col-3 text-left">
+	  	<p>
+	  	<%= link_to "<< Back to Results", :back, class: "btn btn-default btn-sm" %>
+	  	</p>
+  	</div>
 
     <div class="row-fluid">
 			<section class="dams-viewer span12">
