Updated back button css. (DHH-481)

--- a/app/views/dams_objects/show.html.erb
+++ b/app/views/dams_objects/show.html.erb
@@ -13,7 +13,7 @@
   <div id="content" class="show-document span9">
   	<div class="col-3 text-left">
 	  	<p>
-	  	<%= link_to "<< Back", :back, class: "btn btn-default btn-sm" %>
+	  	<%= link_to "« Back", :back, class: "btn btn-default" %>
 	  	</p>
   	</div>
 
