Adding link to #more_related_resources. DHH-458

--- a/app/views/shared/fields/_related_resource.html.erb
+++ b/app/views/shared/fields/_related_resource.html.erb
@@ -107,7 +107,7 @@
       <%
         if(link_count == linkNumber && value.size > linkNumber)
       %>
-      	  <a href="#" id="more_related_resources">More ...</a>
+      	  <a href="#more_related_resources" id="more_related_resources">More ...</a>
       <%
         end
 	  	
