sort in ascending order for name. (DHH-475)

--- a/app/views/shared/fields/_relationships_data.html.erb
+++ b/app/views/shared/fields/_relationships_data.html.erb
@@ -2,7 +2,7 @@
         temp = htmlOpen
         temp %= key.pluralize(value.count).titleize
         concat temp.html_safe
-        value.each do |name|
+        value.sort.each do |name|
 %>
           <li><%= link_to "<i class='icon-tag icon-white'></i> #{name}".html_safe, facet_uri(name, 'creator_sim'), :class => "label" %></li>
           
