--- a/app/views/catalog/_sort_and_per_page.html.erb
+++ b/app/views/catalog/_sort_and_per_page.html.erb
@@ -6,8 +6,8 @@
 	  <div class="btn-group"><%= link_to 'Advanced Search', advanced_path, :class => 'btn btn-mini' %></div>
 	</div>
 
-  <div class="page_links">
-    <%= render :partial => 'paginate_about' %>
-  </div>
+  <div class="hidden-phone">
+	<%= render :partial => 'paginate_compact' %>
+	</div>
 
 </div>
