--- a/app/views/catalog/collection_search.html.erb
+++ b/app/views/catalog/collection_search.html.erb
@@ -1,21 +1,24 @@
 <div class="row-fluid">
   <div id="sidebar" class="span3">
-    <%= render :partial=>'facets' %>
+    <%= render :partial => 'facets' %>
   </div>
   <div id="content" class="span9">
     <% @page_title = 'Browse By Collection' %>
-    <h3>
-    Browse by Collection<%if !@current_unit.blank?%>: <%=@current_unit%><%end%>
-    </h3>
+    <h3>Browse by Collection<%if !@current_unit.blank?%>: <%=@current_unit%><%end%></h3>
 
     <div class="alert alert-info alert-no-dismiss">
       View current collections below. Click an image or link for a full description.
     </div>
 
     <%= render 'sort_and_per_page' %>
-    <%= render :partial => 'constraints' %>
+    <%#= render :partial => 'constraints' %>
     <h3 class="hide-text"><%= t('blacklight.search.search_results') %></h3>
     <%= render_document_index %>
-    <%= render 'results_pagination' %>
+
+    <%#= render 'results_pagination' %>
+    <div class="dams-search-results-footer">
+      <%= render :partial => 'paginate_compact' %>
+    </div>
+
   </div>
 </div>
