--- a/app/views/dams_units/index.html.erb
+++ b/app/views/dams_units/index.html.erb
@@ -1,7 +1,7 @@
 <section id="home-01">
   <%=image_tag '/images/logo-dc.png', :alt => 'Digital Collections', :id => 'dc-logo' %>
 	<section class="tagline">
-		<p>Currently totaling <%= number_with_delimiter(@count_resp.total_count) %> images, audio recordings, videos, documents, &amp;&nbsp;data&nbsp;sets</p>
+		<p>Currently totaling <%= number_with_delimiter(@count_resp.total_count) %> research data sets, images, documents, video and audio recordings.</p>
 	</section>
   <%= form_tag catalog_index_url, :method => :get, :class => '', :id => 'dc-search-box' do %>
 		<fieldset>
@@ -33,5 +33,5 @@
     <%= link_to '<span class="visually-hidden">UCSD Research Data Collections</span>'.html_safe, dams_unit_collections_path('rci'), :class => 'cat-rci' %>
     <p>Research data gathered by campus researchers as part of a campus-wide Research Cyberinfrastructure initiative</p>
   </div>
-  <p class="invitation">Currently totaling <%= number_with_delimiter(@count_resp.total_count) %> images, audio recordings, videos, documents, and data sets, we continue to add items over time, and we invite you to search or browse these collections for research or educational purposes.</p>
+  <p class="invitation">Currently totaling <%= number_with_delimiter(@count_resp.total_count) %> research data sets, images, documents, video and audio recordings, we continue to add items over time, and we invite you to search or browse these collections for research or educational purposes.</p>
 </section>
