Changing Unit field label in collections and object landing pages. DHH-519

--- a/app/views/shared/fields/_unit.html.erb
+++ b/app/views/shared/fields/_unit.html.erb
@@ -14,7 +14,7 @@
 
 	 if fieldData != nil
 
-		 htmlOpen %= 'Unit'
+		 htmlOpen %= 'Repository'
 		 concat htmlOpen.html_safe
 
 		 unit = JSON.parse(fieldData.first)
