--- a/app/views/advanced/_advanced_search_form.html.erb
+++ b/app/views/advanced/_advanced_search_form.html.erb
@@ -5,7 +5,7 @@
 	<fieldset>
 		<%= search_as_hidden_fields(:params => advanced_search_context ) %>
 		<label for="op">Matching</label>
-		<%= select_tag(:op, options_for_select({'Match all'=>'AND','Match any'=>'OR'}.sort,'all'), :class => '') %>
+		<%= select_tag(:op, options_for_select({'Match all fields'=>'AND','Match any field'=>'OR'}.sort,'all'), :class => '') %>
 		<%= render 'advanced/advanced_search_fields' %>
 	</fieldset>
 
