--- a/app/views/advanced/_advanced_search_fields.html.erb
+++ b/app/views/advanced/_advanced_search_fields.html.erb
@@ -1,6 +1,10 @@
 <%- search_fields_for_advanced_search.each do |key, field_def| -%>
   <div class="advanced_search_field">
     <%= label_tag key, field_def.label %>
-    <%= text_field_tag key, label_tag_default_for(key), :class => 'input-block-level' %>
+    <% if params && key == "Keyword (Title, Name/Creator, Topic, Notes etc.)" %>
+      <%= text_field_tag key, label_tag_default_for(key), :value => params[:q], :class => 'input-block-level' %>
+    <% else %>
+      <%= text_field_tag key, label_tag_default_for(key), :class => 'input-block-level' %>
+    <% end %>
   </div>
 <%- end -%>
