--- a/app/views/catalog/_sort_and_per_page.html.erb
+++ b/app/views/catalog/_sort_and_per_page.html.erb
@@ -3,7 +3,10 @@
 	<div class="btn-toolbar results-tools hidden-phone">
     <%= render :partial => 'sort_widget' %>
     <%= render :partial => 'per_page_widget' %>
-	  <div class="btn-group"><%= link_to 'Advanced Search', advanced_path, :class => 'btn btn-mini' %></div>
+	  <div class="btn-group"><%#= link_to 'Advanced Search', advanced_path, :class => 'btn btn-mini' %>
+     <%= link_to 'Advanced Search', params.merge(:controller=>"advanced", :action=>"index") , 
+        :class => 'btn btn-mini' %> 
+    </div>
 	</div>
 
   <div class="hidden-phone">
