Updating Back link for search results. DHH-522

--- a/app/assets/stylesheets/custom-search.css.scss
+++ b/app/assets/stylesheets/custom-search.css.scss
@@ -182,6 +182,7 @@
 .search-results-pager a{font-weight:bold;color:#444;}
 .search-results-pager > span{display:inline-block;margin:0 5px;}
 .search-results-pager abbr{cursor:default;border-bottom:0 none;font-style: italic;}
+.search-results-pager a.results_link{font-weight:bold;color:#016691;}
 
 /*---------------*/
 /* MEDIA QUERIES */
