--- a/app/views/dams_objects/_video_viewer_complex.html.erb
+++ b/app/views/dams_objects/_video_viewer_complex.html.erb
@@ -12,4 +12,4 @@
   <div id="dams-video-<%=componentIndex%>" data='<%=dataForDynamicLoad%>'>Loading the player...</div>
 
 <% end %>
-<%= render :partial => 'admin_download', :locals => {:downloadFilePath => downloadFilePath } %>
+<%= render :partial => 'admin_download', :locals => {:downloadFilePath => downloadFilePath, :downloadDerivativePath => downloadDerivativePath  } %>
