--- a/app/views/dams_objects/_audio_viewer_complex.html.erb
+++ b/app/views/dams_objects/_audio_viewer_complex.html.erb
@@ -13,4 +13,4 @@
   <div id="dams-audio-<%=componentIndex%>" data='<%=dataForDynamicLoad%>'>Loading the player...</div>
 
 <% end %>
-<%= render :partial => 'admin_download', :locals => {:downloadFilePath => downloadFilePath } %>
+<%= render :partial => 'admin_download', :locals => {:downloadFilePath => downloadFilePath, :downloadDerivativePath => downloadDerivativePath  } %>
