--- a/app/views/dams_objects/_image_viewer.html.erb
+++ b/app/views/dams_objects/_image_viewer.html.erb
@@ -16,4 +16,4 @@
 		<%= link_to image_tag(filePath, :alt => ''), zoomFilePath %>
 	<% end %>
 <% end %>
-<%= render :partial => 'admin_download', :locals => {:downloadFilePath => downloadFilePath } %>
+<%= render :partial => 'admin_download', :locals => {:downloadFilePath => downloadFilePath, :downloadDerivativePath => downloadDerivativePath} %>
