--- a/app/views/dams_objects/_simple_object_viewer.html.erb
+++ b/app/views/dams_objects/_simple_object_viewer.html.erb
@@ -12,13 +12,13 @@
 	<div class="simple-object">
 		<% case fileType %>
 		<% when 'image-service' %>
-			<%= render :partial => 'image_viewer', :locals => {:displayFilePath => display_file_path, :zoomFilePath  => zoom_file_path, :filePath => service_file_path, :pdfFilePath => pdf_file_path, :service_file => service_file, :downloadFilePath => download_file_path} %>
+			<%= render :partial => 'image_viewer', :locals => {:displayFilePath => display_file_path, :zoomFilePath  => zoom_file_path, :filePath => service_file_path, :pdfFilePath => pdf_file_path, :service_file => service_file, :downloadFilePath => download_file_path, :downloadDerivativePath => download_derivative_path} %>
 		<% when 'audio-service' %>
-			<%= render :partial => 'audio_viewer', :locals => {:filePath => service_file_path, :downloadFilePath => download_file_path} %>
+			<%= render :partial => 'audio_viewer', :locals => {:filePath => service_file_path, :downloadFilePath => download_file_path, :downloadDerivativePath => download_derivative_path} %>
 		<% when 'video-service' %>
-			<%= render :partial => 'video_viewer', :locals => {:filePath => service_file_path, :icon => display_file_path, :downloadFilePath => download_file_path} %>
+			<%= render :partial => 'video_viewer', :locals => {:filePath => service_file_path, :icon => display_file_path, :downloadFilePath => download_file_path, :downloadDerivativePath => download_derivative_path} %>
 		<% when 'document-service' %>
-	    <%= render :partial => 'document_viewer', :locals => {:filePath => service_file_path, :displayFilePath => display_file_path} %>
+	    <%= render :partial => 'document_viewer', :locals => {:filePath => service_file_path, :displayFilePath => display_file_path, :downloadDerivativePath => download_derivative_path} %>
 			<%= render :partial => 'metadata_data_file', :locals => {:fileName => service_file} %>
 			<%= render :partial => 'data_viewer', :locals => {:displayFilePath => display_file_path, :filePath => service_file_path, :objectType => 'simple', :pdfFilePath => pdf_file_path} %>
 		<% when 'data-service' %>
