--- a/app/views/dams_objects/_video_viewer.html.erb
+++ b/app/views/dams_objects/_video_viewer.html.erb
@@ -30,4 +30,4 @@
 	</script>
 
 <% end %>
-<%= render :partial => 'admin_download', :locals => {:downloadFilePath => downloadFilePath } %>
+<%= render :partial => 'admin_download', :locals => {:downloadFilePath => downloadFilePath, :downloadDerivativePath => downloadDerivativePath } %>
