--- a/app/views/dams_objects/show.html.erb
+++ b/app/views/dams_objects/show.html.erb
@@ -21,6 +21,7 @@
 			<section class="dams-viewer span12">
 			  <%= render :partial => 'shared/fields/title' %>
 				<%= render :partial => 'object_viewer' %>
+				<%= render :partial => 'social_links' %>
 			</section>
 		</div>
 
