--- a/app/views/shared/fields/_style_period.html.erb
+++ b/app/views/shared/fields/_style_period.html.erb
@@ -1,13 +1,13 @@
 <%
-	if defined?(componentIndex) # Then we're working with a component
-		prefix = "component_#{componentIndex}_"
-		htmlOpen = "<tr><td>%s</td><td><ul class='unstyled'>"
-		htmlClose = "</ul></td></tr>"
-	else # We're working with an object or collection
-		prefix = ''
-		htmlOpen = "<dt>%s</dt><dd><ul class='unstyled'>"
-		htmlClose = "</ul></dd>"
-	end
+   if defined?(componentIndex) # Then we're working with a component
+     prefix = "component_#{componentIndex}_"
+     htmlOpen = '<tr><td>%s</td><td>'
+     htmlClose = '</td></tr>'
+   else # We're working with an object or collection
+     prefix = ''
+     htmlOpen = '<dt>%s</dt><dd>'
+     htmlClose = '</dd>'
+   end
 
 	fieldData = @document["#{prefix}stylePeriod_tesim"]
 
@@ -15,15 +15,15 @@
 
 		htmlOpen %= 'Style Period'.pluralize(fieldData.count)
 		concat htmlOpen.html_safe
-
-		fieldData.each do |datum|
-			stylePeriod = datum
 %>
-			<li><%= link_to "<i class='icon-tag icon-white'></i> #{stylePeriod}".html_safe, facet_uri(stylePeriod, 'subject_topic_sim'), :class => "label" %></li>
-<%
-		end
 
-		concat htmlClose.html_safe
+	  <ul class="unstyled glyphicon-list glyphicon-list-tag">
+	    <% fieldData.each do |topic| %>
+	      <li><%= link_to topic, facet_uri(topic, 'subject_topic_sim') %></li>
+	    <% end %>
+	  </ul>
 
-	end
-%>
+	  <% concat htmlClose.html_safe %>
+
+	<% end %>
+
