--- a/app/views/dams_objects/_admin_download.html.erb
+++ b/app/views/dams_objects/_admin_download.html.erb
@@ -1,14 +1,15 @@
 <% btnColor = (@document['component_count_isi'] != nil) ? 'btn-inverse' : 'btn-primary' %>
+<% ucsd_local_display = (@document['otherRights_tesim'] != nil && @document['otherRights_tesim'].first.to_s.include?('localDisplay')) ? 'true' : 'false' %>
 <% if can? :update, @document then %>
   <div class="form-actions dams-download-button">
     <a class="btn <%=btnColor%> pull-right" href="<%= downloadFilePath %>">
       <i class="icon-download-alt icon-white"></i>Download file
     </a>
   </div>
-<% else %>
+<% elsif ucsd_local_display == 'false' %>
   <div class="form-actions dams-download-button">
     <a class="btn <%=btnColor%> pull-right" href="<%= downloadDerivativePath %>">
       <i class="icon-download-alt icon-white"></i>Download file
-    </a> 
+    </a>
   </div>
 <% end %>
