--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,9 +24,9 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse By <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><%= link_to 'Collection', dams_collections_path %></li>
-              <li><%= link_to 'Creator', catalog_facet_path("creator_sim", :'facet.sort' => 'index') %></li>
+              <li><%= link_to 'Creator', catalog_facet_path("creator_sim", :'facet.sort' => 'index', :'facet.prefix' => 'A') %></li>
               <li><%= link_to 'Format', catalog_facet_path("object_type_sim", :'facet.sort' => 'index') %></li>
-              <li><%= link_to 'Topic', catalog_facet_path("subject_topic_sim", :'facet.sort' => 'index') %></li>
+              <li><%= link_to 'Topic', catalog_facet_path("subject_topic_sim", :'facet.sort' => 'index', :'facet.prefix' => 'A') %></li>
             </ul>
           </li>
 
