--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,4 +1,3 @@
-<%= javascript_include_tag 'ckeditor/ckeditor' %>
 <h1>Editing Page</h1>
 
 <%# render 'form', submit_button: 'save' %>
@@ -19,8 +18,8 @@
   </p>
   <script>CKEDITOR.replace('page_body')</script>
 
-  <%= f.submit "Save", class: "btn btn-primary" %>
+  <%= f.submit "Save Page", class: "btn btn-primary" %>
+  <%= link_to 'View', view_page_path(@page.code), class: "btn btn-primary" %>
+  <%= link_to 'Page List', pages_path, class: "btn btn-primary" %>
 <% end %>
 
-<%= link_to 'View', view_page_path(@page.code), class: "btn btn-primary" %>
-<%= link_to 'Page List', pages_path, class: "btn btn-primary" %>
