--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,5 +1,32 @@
 <h1>New Page</h1>
+<%= form_for(@page) do |f| %>
+  <% if @page.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@page.errors.count, "error") %> prohibited this page from being saved:</h2>
 
-<%= render 'form' %>
+      <ul>
+      <% @page.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
 
-<%= link_to 'Cancel', pages_path, class: "btn btn-primary" %>
+  <div class="field">
+    <%= f.label :code %><br>
+    <%= f.text_field :code %>
+  </div>
+  <div class="field">
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
+  </div>
+  <div class="field">
+    <%= f.label :body %>
+    <%= f.text_area :body, size: '70x30' %>
+  </div>
+  <script>CKEDITOR.replace('page_body')</script>
+
+  <br/>
+  <%= f.submit 'Create Page', class: "btn btn-primary" %>
+  <%= link_to 'Page List', pages_path, class: "btn btn-primary" %>
+<% end %>
