Updating the format facets and fixing the test.(DHH-518)

--- a/app/views/shared/fields/_resource_type.html.erb
+++ b/app/views/shared/fields/_resource_type.html.erb
@@ -37,9 +37,9 @@
        end
      end
    else
-     collection_title = @document['title_tesim'].first
+     collection_title = @document['title_tesim'].first if !@document['title_tesim'].blank?
    end
-
+  
 	 fieldData = @document["#{prefix}resource_type_tesim"]
 
 	 if fieldData != nil
